# python-msilib

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  data.json  pyproject.toml  requirements-dev.txt
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  coverage.yml  dependency-review.yml  scorecards.yml
ci/: build-wheel.sh  bump-version.sh  install-tools.sh  pythoncapi.sh  requirements.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_3354a0ce13cdd8f3___init___py.html  z_3354a0ce13cdd8f3_schema_py.html  z_3354a0ce13cdd8f3_sequence_py.html  z_3354a0ce13cdd8f3_text_py.html
src/msilib/: __init__.py  _msi.c  _msi.pyi  schema.py  sequence.py  text.py
src/msilib/include/: _msi.h
tests/: requirements.txt  test_msilib.py
