[build-system]
requires = [
    "setuptools~=82.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "python-msilib"
version = "0.5.1.dev0"
description = "Read and write Microsoft Installer files"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 2 - Beta",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]
keywords = ["msilib"]
license = "PSF-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13"

[[project.authors]]
name = "Marcelo Duarte"
email = "marcelotduarte@users.noreply.github.com"

[[project.authors]]
name = " Martin v. Löwis"
email = "loewis@users.noreply.github.com"

[project.urls]
Source = "https://github.com/marcelotduarte/python-msilib"
Changelog = "https://github.com/marcelotduarte/python-msilib/releases"
Documentation = "https://docs.python.org/3.12/library/msilib.html"

[dependency-groups]
dev = [
    "cibuildwheel==3.3.1",
    "pre-commit==4.5.1",
]
tests = [
    "coverage==7.13.2",
    "pytest==9.0.2",
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
zip-safe = false

[[tool.setuptools.ext-modules]]
name = "msilib._msi"
sources = ["src/msilib/_msi.c"]
depends = [
    "src/msilib/include/_msi.h",
    "src/msilib/include/pythoncapi_compat.h"
]
libraries = ["msi","rpcrt4", "cabinet"]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.cibuildwheel]
build-frontend = "build[uv]"
build-verbosity = 1
enable = ["cpython-freethreading"]

[tool.coverage.html]
directory = "build/coverage_html_report"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    # TYPE_CHECKING block is never executed during pytest run
    "if TYPE_CHECKING:",
]
ignore_errors = true
precision = 2

[tool.coverage.paths]
source = [
    "src/msilib/",
    "*/msilib/",
]

[tool.coverage.run]
command_line = "-m pytest"
dynamic_context = "test_function"
source = ["msilib"]
parallel = true
relative_files = true

[tool.pytest]
minversion = "9.0"
addopts = ["-rpfEsXx"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:distutils.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:setuptools.*",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "ANN2", # flake8-annotations - missing return type
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "DTZ",  # flake8-datetimez
    "E", "W",  # pycodestyle
    "EXE",  # flake8-executable
    "EM",   # flake8-errmsg
    "ERA",  # eradicate
    "F",    # flake8
    "FA",   # flake8-future-annotations
    "FLY",  # flynt
    "G",    # flake8-logging-format
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "INT",  # flake8-gettext
    "ISC003",  # flake8-implicit-str-concat - explicit-string-concatenation
    "LOG",  # flake8-logging
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PLC", "PLE", "PLR", "PLW",  # pylint
    "PT",   # flake8-pytest-style
    "PYI",  # flake8-pyi
    "Q004", # flake8-quotes - unnecessary-escaped-quote
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "T10",  # flake8-debugger
    "TC",   # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
]
ignore = [
    "D105",     # Missing docstring in magic method
    "D107",     # Missing docstring in `__init__`
    "D203",     # conflict with D211
    "D213",     # conflict with D212
    # should be revised in future - last revised using ruff 0.14.2
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D205",     # 1 blank line required between summary line and description
    "PLR2004",  # Magic value used in comparison, consider replacing
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0915",  # too-many-statements
    # prone to false positives (https://github.com/astral-sh/ruff/issues/4045)
    "S603",
]

[tool.ruff.lint.per-file-ignores]
"src/msilib/__init__.py" = [
    "A002",
    "A005",
    "ANN201",
    "ERA001",
    "PLW0603", # global
    "S101",     # Use of `assert` detected
    "S608",
]
"src/msilib/schema.py" = [
    "E501",     # Line too long
]
"src/msilib/text.py" = [
    "E501",     # Line too long
]
"tests/*" = [
    "S101",     # Use of `assert` detected
    "ANN201",
]

[tool.ruff.lint.flake8-builtins]
strict-checking = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 50
